--- a/index.html
+++ b/index.html
@@ -1,40 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon-32x32.png"
+		/>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+		<title>Frontend Mentor | FAQ Accordion Card</title>
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+		<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+		<link href="/css/main.css" rel="stylesheet" />
+	</head>
+	<body>
+		<main>
+			<div id="card">
+				<div class="side-img">
+					<div class="desktop">
+						<img
+							class="woman"
+							src="/images/illustration-woman-online-desktop.svg"
+						/>
+						<img class="box" src="/images/illustration-box-desktop.svg" />
+					</div>
+					<div class="mobile">
+						<img
+							class="woman"
+							src="/images/illustration-woman-online-mobile.svg"
+						/>
+					</div>
+				</div>
+				<div class="faq">
+					<h1>FAQ</h1>
+					<div class="q">
+						<input id="q1" class="collapse" type="radio" name="faq" />
+						<label for="q1">How many team members can I invite?</label>
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
+						<p class="a">
+							You can invite up to 2 additional users on the Free plan. There is
+							no limit on team members for the Premium plan.
+						</p>
+					</div>
+					<hr />
+					<div class="q">
+						<input id="q2" class="collapse" type="radio" name="faq" checked />
+						<label for="q2">What is the maximum file upload size?</label>
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
+						<p class="a">
+							No more than 2GB. All files in your account must fit your allotted
+							storage space.
+						</p>
+					</div>
+					<hr />
+					<div class="q">
+						<input id="q3" class="collapse" type="radio" name="faq" />
+						<label for="q3">How do I reset my password?</label>
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
+						<p class="a">
+							Click “Forgot password” from the login page or “Change password”
+							from your profile page. A reset link will be emailed to you.
+						</p>
+					</div>
+					<hr />
+					<div class="q">
+						<input id="q4" class="collapse" type="radio" name="faq" />
+						<label for="q4">Can I cancel my subscription?</label>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+						<p class="a">
+							Yes! Send us a message and we’ll process your request no questions
+							asked.
+						</p>
+					</div>
+					<hr />
+					<div class="q">
+						<input id="q5" class="collapse" type="radio" name="faq" />
+						<label for="q5">Do you provide additional support?</label>
+
+						<p class="a">
+							Chat and email support is available 24/7. Phone lines are open
+							during normal business hours.
+						</p>
+					</div>
+					<hr />
+				</div>
+			</div>
+		</main>
+	</body>
 </html>
