--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<title>Frontend Mentor | FAQ Accordion Card</title>
 
 		<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-		<link href="/css/main.css" rel="stylesheet" />
+		<link href="css/main.css" rel="stylesheet" />
 	</head>
 	<body>
 		<main>
@@ -24,14 +24,14 @@
 					<div class="desktop">
 						<img
 							class="woman"
-							src="/images/illustration-woman-online-desktop.svg"
+							src="images/illustration-woman-online-desktop.svg"
 						/>
 						<img class="box" src="/images/illustration-box-desktop.svg" />
 					</div>
 					<div class="mobile">
 						<img
 							class="woman"
-							src="/images/illustration-woman-online-mobile.svg"
+							src="images/illustration-woman-online-mobile.svg"
 						/>
 					</div>
 				</div>
