--- a/index.html
+++ b/index.html
@@ -25,13 +25,19 @@
 						<img
 							class="woman"
 							src="images/illustration-woman-online-desktop.svg"
+							alt="illustration"
 						/>
-						<img class="box" src="images/illustration-box-desktop.svg" />
+						<img
+							class="box"
+							src="images/illustration-box-desktop.svg"
+							alt="illustration"
+						/>
 					</div>
 					<div class="mobile">
 						<img
 							class="woman"
 							src="images/illustration-woman-online-mobile.svg"
+							alt="illustration"
 						/>
 					</div>
 				</div>
